end2end_large/version3/metrics/original_report.md
# Stage 1 Baseline Report

Experiment: `review_sttopk_xsz_dtmean_2019_2020_e3`

## Architecture

Raw 1-minute OHLCV/amount/OI -> strictly causal rolling z-score -> low-rank FM-style interaction block -> PatchTST-style patch embedding -> pre-norm Transformer -> learnable multi-layer output aggregation -> attention/mean/CLS pooling -> MLP prediction head.

## Key Metrics

- Merged test IC: `0.025598`
- Merged test RankIC: `0.048248`
- Monthly ICIR: `2.742099`
- Scored rows: `5574178`

## Rolling Splits

| split | train_start | train_end | effective_train_end | effective_val_end | test_start | test_end | train_windows | val_windows | test_windows | ic | rank_ic | postprocess_mode | cs_ic_mean | cs_ic_std | cs_ic_ir | cs_ic_positive_frac | cs_ic_n | cs_rank_ic_mean | cs_rank_ic_std | cs_rank_ic_ir | cs_rank_ic_positive_frac | cs_rank_ic_n |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| 2019M01 | 2017-01-01 | 2019-01-01 | 2018-11-30 | 2018-12-31 | 2019-01-01 | 2019-02-01 | 465767 | 22289 | 234529 | 0.030318 | 0.050298 | datetime_demean | 0.043161 | 0.188567 | 0.228892 | 0.581158 | 6358 | 0.063353 | 0.210319 | 0.301221 | 0.614659 | 6358 |
| 2019M02 | 2017-01-01 | 2019-02-01 | 2018-12-31 | 2019-01-31 | 2019-02-01 | 2019-03-01 | 489186 | 23909 | 156853 | 0.022796 | 0.043486 | datetime_demean | 0.027369 | 0.179313 | 0.152634 | 0.559962 | 4211 | 0.040323 | 0.196772 | 0.204923 | 0.583472 | 4211 |
| 2019M03 | 2017-01-01 | 2019-03-01 | 2019-01-31 | 2019-02-28 | 2019-03-01 | 2019-04-01 | 513095 | 15614 | 220942 | 0.038476 | 0.064782 | datetime_demean | 0.042721 | 0.186537 | 0.229023 | 0.589448 | 6065 | 0.062973 | 0.202895 | 0.310373 | 0.628030 | 6065 |
| 2019M04 | 2017-01-01 | 2019-04-01 | 2019-02-28 | 2019-03-31 | 2019-04-01 | 2019-05-01 | 529854 | 23627 | 194721 | 0.050816 | 0.075749 | datetime_demean | 0.065452 | 0.193549 | 0.338167 | 0.647313 | 5546 | 0.085894 | 0.208397 | 0.412166 | 0.668590 | 5546 |
| 2019M05 | 2017-01-01 | 2019-05-01 | 2019-03-31 | 2019-04-30 | 2019-05-01 | 2019-06-01 | 554629 | 20254 | 214603 | 0.031457 | 0.053566 | datetime_demean | 0.039772 | 0.195510 | 0.203427 | 0.586134 | 5683 | 0.054544 | 0.206869 | 0.263665 | 0.602147 | 5683 |
| 2019M06 | 2017-01-01 | 2019-06-01 | 2019-04-30 | 2019-05-31 | 2019-06-01 | 2019-07-01 | 574883 | 21853 | 208301 | 0.025544 | 0.054528 | datetime_demean | 0.044383 | 0.195851 | 0.226619 | 0.591037 | 5333 | 0.061816 | 0.199697 | 0.309548 | 0.625914 | 5333 |
| 2019M07 | 2017-01-01 | 2019-07-01 | 2019-05-31 | 2019-06-30 | 2019-07-01 | 2019-08-01 | 597364 | 22299 | 258077 | 0.014046 | 0.040515 | datetime_demean | 0.020834 | 0.187606 | 0.111051 | 0.549165 | 6590 | 0.044407 | 0.196662 | 0.225802 | 0.595903 | 6590 |
| 2019M08 | 2017-01-01 | 2019-08-01 | 2019-06-30 | 2019-07-31 | 2019-08-01 | 2019-09-01 | 620847 | 26431 | 253582 | 0.008299 | 0.030999 | datetime_demean | 0.016461 | 0.199000 | 0.082720 | 0.534770 | 6313 | 0.029367 | 0.194737 | 0.150805 | 0.561381 | 6313 |
| 2019M09 | 2017-01-01 | 2019-09-01 | 2019-07-31 | 2019-08-31 | 2019-09-01 | 2019-10-01 | 647278 | 27141 | 226242 | 0.028289 | 0.060072 | datetime_demean | 0.035339 | 0.197576 | 0.178861 | 0.576322 | 5693 | 0.055701 | 0.206932 | 0.269174 | 0.609696 | 5693 |
| 2019M10 | 2017-01-01 | 2019-10-01 | 2019-08-31 | 2019-09-30 | 2019-10-01 | 2019-11-01 | 675627 | 22957 | 220201 | 0.033025 | 0.052996 | datetime_demean | 0.033137 | 0.214273 | 0.154650 | 0.568007 | 5720 | 0.047813 | 0.219833 | 0.217496 | 0.593182 | 5720 |
| 2019M11 | 2017-01-01 | 2019-11-01 | 2019-09-30 | 2019-10-31 | 2019-11-01 | 2019-12-01 | 698584 | 21862 | 251673 | 0.037969 | 0.063398 | datetime_demean | 0.040562 | 0.192627 | 0.210573 | 0.582924 | 6512 | 0.062161 | 0.208917 | 0.297538 | 0.617015 | 6512 |
| 2019M12 | 2017-01-01 | 2019-12-01 | 2019-10-31 | 2019-11-30 | 2019-12-01 | 2020-01-01 | 721282 | 26489 | 258766 | 0.033252 | 0.060460 | datetime_demean | 0.040059 | 0.207654 | 0.192910 | 0.584885 | 6391 | 0.058335 | 0.210984 | 0.276488 | 0.613519 | 6391 |
| 2020M01 | 2017-01-01 | 2020-01-01 | 2019-11-30 | 2019-12-31 | 2020-01-01 | 2020-02-01 | 749074 | 26464 | 194504 | 0.035308 | 0.056456 | datetime_demean | 0.034264 | 0.218873 | 0.156547 | 0.564381 | 4885 | 0.053638 | 0.224058 | 0.239395 | 0.604708 | 4885 |
| 2020M02 | 2017-01-01 | 2020-02-01 | 2019-12-31 | 2020-01-31 | 2020-02-01 | 2020-03-01 | 775539 | 20500 | 163321 | 0.043585 | 0.062758 | datetime_demean | 0.046645 | 0.159735 | 0.292014 | 0.602633 | 3342 | 0.062692 | 0.172317 | 0.363818 | 0.631658 | 3342 |
| 2020M03 | 2017-01-01 | 2020-03-01 | 2020-01-31 | 2020-02-29 | 2020-03-01 | 2020-04-01 | 796900 | 17382 | 180069 | 0.017262 | 0.037657 | datetime_demean | 0.027212 | 0.167026 | 0.162920 | 0.570615 | 3689 | 0.044949 | 0.187541 | 0.239675 | 0.606126 | 3689 |
| 2020M04 | 2017-01-01 | 2020-04-01 | 2020-02-29 | 2020-03-31 | 2020-04-01 | 2020-05-01 | 814282 | 18250 | 175812 | 0.019048 | 0.034498 | datetime_demean | 0.023714 | 0.150108 | 0.157979 | 0.554169 | 3526 | 0.035570 | 0.172487 | 0.206218 | 0.576858 | 3526 |
| 2020M05 | 2017-01-01 | 2020-05-01 | 2020-03-31 | 2020-04-30 | 2020-05-01 | 2020-06-01 | 832532 | 17830 | 236998 | 0.035937 | 0.058372 | datetime_demean | 0.045374 | 0.223358 | 0.203143 | 0.590156 | 6339 | 0.059426 | 0.243988 | 0.243560 | 0.605774 | 6339 |
| 2020M06 | 2017-01-01 | 2020-06-01 | 2020-04-30 | 2020-05-31 | 2020-06-01 | 2020-07-01 | 851254 | 24849 | 263643 | 0.029283 | 0.052402 | datetime_demean | 0.043738 | 0.222694 | 0.196403 | 0.583669 | 7201 | 0.059955 | 0.242384 | 0.247355 | 0.610749 | 7201 |
| 2020M07 | 2017-01-01 | 2020-07-01 | 2020-05-31 | 2020-06-30 | 2020-07-01 | 2020-08-01 | 876992 | 25568 | 309953 | 0.027016 | 0.050337 | datetime_demean | 0.042761 | 0.214182 | 0.199647 | 0.586183 | 8569 | 0.056791 | 0.241894 | 0.234775 | 0.608589 | 8569 |
| 2020M08 | 2017-01-01 | 2020-08-01 | 2020-06-30 | 2020-07-31 | 2020-08-01 | 2020-09-01 | 902560 | 30274 | 278532 | 0.025948 | 0.045111 | datetime_demean | 0.033164 | 0.211112 | 0.157090 | 0.573240 | 7571 | 0.046378 | 0.235464 | 0.196964 | 0.595562 | 7571 |
| 2020M09 | 2017-01-01 | 2020-09-01 | 2020-07-31 | 2020-08-31 | 2020-09-01 | 2020-10-01 | 934206 | 27514 | 290742 | 0.028712 | 0.042058 | datetime_demean | 0.037383 | 0.209558 | 0.178390 | 0.566617 | 8076 | 0.052842 | 0.237930 | 0.222090 | 0.596706 | 8076 |
| 2020M10 | 2017-01-01 | 2020-10-01 | 2020-08-31 | 2020-09-30 | 2020-10-01 | 2020-11-01 | 963088 | 29545 | 214627 | 0.014634 | 0.027739 | datetime_demean | 0.022121 | 0.216795 | 0.102037 | 0.529412 | 5950 | 0.035719 | 0.242863 | 0.147073 | 0.552773 | 5950 |
| 2020M11 | 2017-01-01 | 2020-11-01 | 2020-09-30 | 2020-10-31 | 2020-11-01 | 2020-12-01 | 994029 | 22407 | 281971 | 0.014460 | 0.031032 | datetime_demean | 0.024109 | 0.214121 | 0.112594 | 0.552869 | 7859 | 0.038017 | 0.238185 | 0.159613 | 0.572846 | 7859 |
| 2020M12 | 2017-01-01 | 2020-12-01 | 2020-10-31 | 2020-11-30 | 2020-12-01 | 2021-01-01 | 1017304 | 28133 | 285516 | 0.022497 | 0.040574 | datetime_demean | 0.035351 | 0.226488 | 0.156083 | 0.567977 | 7863 | 0.051135 | 0.252956 | 0.202148 | 0.587944 | 7863 |

## Artifacts

- split_metrics: `/root/autodl-tmp/quant/end2end/runs/review_sttopk_xsz_dtmean_2019_2020_e3/split_metrics.csv`
- yearly_metrics: `/root/autodl-tmp/quant/end2end/runs/review_sttopk_xsz_dtmean_2019_2020_e3/yearly_metrics.csv`
- monthly_metrics: `/root/autodl-tmp/quant/end2end/runs/review_sttopk_xsz_dtmean_2019_2020_e3/monthly_metrics.csv`
- symbol_metrics: `/root/autodl-tmp/quant/end2end/runs/review_sttopk_xsz_dtmean_2019_2020_e3/symbol_metrics.csv`
- metrics: `/root/autodl-tmp/quant/end2end/runs/review_sttopk_xsz_dtmean_2019_2020_e3/metrics.json`
- figure: `/root/autodl-tmp/quant/end2end/figures/review_sttopk_xsz_dtmean_2019_2020_e3/review_sttopk_xsz_dtmean_2019_2020_e3_pred_distribution.png`
- figure: `/root/autodl-tmp/quant/end2end/figures/review_sttopk_xsz_dtmean_2019_2020_e3/review_sttopk_xsz_dtmean_2019_2020_e3_label_distribution.png`
- figure: `/root/autodl-tmp/quant/end2end/figures/review_sttopk_xsz_dtmean_2019_2020_e3/review_sttopk_xsz_dtmean_2019_2020_e3_binned_pred_label.png`
- figure: `/root/autodl-tmp/quant/end2end/figures/review_sttopk_xsz_dtmean_2019_2020_e3/review_sttopk_xsz_dtmean_2019_2020_e3_monthly_ic.png`
- figure: `/root/autodl-tmp/quant/end2end/figures/review_sttopk_xsz_dtmean_2019_2020_e3/review_sttopk_xsz_dtmean_2019_2020_e3_cumulative_ic.png`

## Notes

- Rolling normalization is history-only via shifted rolling windows within symbol/session groups.
- The baseline is intentionally compact for first-pass reliability; larger widths, more windows, and additional ideas should be tested through the ablation harness next.
